Fix bug that was not showing results previously

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,9 @@
   display: block;
 }
 
-#result {
+#Python, #JavaScript, #Ruby {
   display: none;
-}
+} 
 
 h1 {
   background-color: aquamarine;
